# luckydraw

./: .gitignore  Cargo.toml
dioxus-client/: Cargo.toml
egui-client/: Cargo.toml  README.md  index.html
egui-client/assets/: sw.js
egui-client/src/: lib.rs  main.rs
egui-client/src/app/: mod.rs
egui-client/src/app/module/: home.rs  login.rs  mod.rs
egui-client/src/app/module/page/: mod.rs  page1001.rs
egui-client/src/app/page/: home.rs  login.rs  mod.rs
init_data/: Cargo.toml
init_data/sql/create/: ld_activity.sql  ld_custom.sql  ld_dict.sql  ld_menu.sql  ld_role.sql  ld_user_role.sql
init_data/sql/data/: ld_menu.sql  ld_role.sql  ld_user.sql  ld_user_role.sql
init_data/sql/table/: ld_menu.sql  ld_plan.sql  ld_plan_range.sql  ld_user.sql  ld_win_list.sql
init_data/sql/tables/: ld_user.sql
init_data/src/: main.rs
src/: config.rs  main.rs
src/web/: auth.rs  log_ext.rs  menu.rs  mod.rs  session.rs  sqlite.rs  static_file.rs  user.rs
web-client/: Cargo.toml
web-client/src/: lib.rs
web-client/src/components/: menu.rs
web-client/src/pages/: login.rs  mod.rs
web-client/src/pages/sys1/: fn1001.rs  fn1002.rs  mod.rs
yew-client/: Cargo.toml  index.html  index.scss
yew-client/src/: context.rs  lib.rs
yew-client/src/components/: menu.rs
yew-client/src/pages/: login.rs
yew-client/src/pages/sys1/: fn1001.rs
