[package]
name = "luckydraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["web-client", "init_data"]

[dependencies]
anyhow = { version = "*" }
async-channel = { version = "*" }
async-fs = { version = "*" }
async-global-executor = { version = "*" }
async-session = { git = "https://gitee.com/zzoe/async-session.git", branch = "zoe" }
async-trait = { version = "*" }
fastrand = { version = "*" }
futures = { version = "*" }
hmac = { version = "*" }
log = { version = "*" }
minitrace = { version = "*" }
r2d2 = { version = "*" }
r2d2_sqlite = { version = "*", features=["bundled"] }
serde = { version = "*" }
serde_json = { version = "*" }
sha2 = { version = "*" }
tide = { version = "*", default-features = false, features = ["h1-server", "cookies"] }
tide-rustls = { version = "*" }
time = { version = "*", features = ["macros", "formatting", "local-offset"] }
