[package]
name = "luckydraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["dioxus-client", "egui-client", "yew-client", "init_data"]

[dependencies]
anyhow = { version = "*" }
arc-swap = { version = "*" }
async-fs = { version = "*" }
async-global-executor = { version = "*" }
async-session = { git = "https://gitee.com/zzoe/async-session.git", branch = "zoe" }
async-trait = { version = "*" }
fastrand = { version = "*" }
hmac = { version = "*" }
once_cell = { version = "*" }
r2d2 = { version = "*" }
r2d2_sqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
sha2 = { version = "*" }
tide = { version = "*", default-features = false, features = ["h1-server", "cookies"] }
tide-rustls = { version = "*" }
time = { version = "*", features = ["macros", "formatting", "local-offset"] }
tracing = { version = "*" }
tracing-appender = { version = "*" }
tracing-subscriber = { version = "*", features = ["local-time"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

