[package]
name = "egui-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "*"
eframe = { version = "*", default-feature = false, features = ["wgpu", "dark-light"] }
egui = "*"
futures = { version = "*", features = ["executor"] }
indextree = "*"
serde = { version = "*", features = ["derive"] }
serde_repr = "*"
tracing = "*"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "*"
async-global-executor = "*"
surf = { version = "*", default-features = false, features = ["hyper-client"] }
wasm-bindgen-futures = "*"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"
tracing-wasm = "*"
wasm-bindgen-futures = "*"
surf = { version = "*", default-features = false, features = ["wasm-client"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

